--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-790.5KB/s(Youtube:不良林), server: 5.183.176.94, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-181.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-479.1KB/s(Youtube:不良林), server: 5.183.176.80, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-440.0KB/s(Youtube:不良林), server: 5.183.176.94, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-503.6KB/s(Youtube:不良林), server: 5.183.176.80, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-1.60MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-222.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-328.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-202.1KB/s(Youtube:不良林), server: 185.172.113.101, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-153.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-673.1KB/s(Youtube:不良林), server: alymianf2.yooo.me, port: 22170, type: trojan, password: e9d3628b-ba7f-3092-b1ec-5ff851e00d35, sni: alymianf2.yooo.me, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-411.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-790.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
-      - 🇯🇵 日本-181.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-479.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-440.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-503.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
