--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-222.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-328.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-202.1KB/s(Youtube:不良林), server: 185.172.113.101, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-153.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-673.1KB/s(Youtube:不良林), server: alymianf2.yooo.me, port: 22170, type: trojan, password: e9d3628b-ba7f-3092-b1ec-5ff851e00d35, sni: alymianf2.yooo.me, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.70MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-411.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-194.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-542.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-315.3KB/s(Youtube:不良林), server: 5.183.176.81, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-404.3KB/s(Youtube:不良林), server: 5.183.176.83, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-423.2KB/s(Youtube:不良林), server: 5.183.176.84, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-360.5KB/s(Youtube:不良林), server: 5.183.176.81, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-222.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-202.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1014.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-153.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-673.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.70MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-194.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-542.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-404.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-423.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-360.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
