--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.23MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-211.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-436.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-320.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 89687f0a-bf3e-4a86-8a77-0f82d525db2d, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 捷克-428.4KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇨🇳 中国-491.1KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇬🇧 英国-534.2KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-269.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-227.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-660.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-491.8KB/s(Youtube:不良林), server: 5.183.176.96, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-7.85MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.71MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.99MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-211.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 捷克-428.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-491.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
