--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-534.2KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-269.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-227.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-660.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-491.8KB/s(Youtube:不良林), server: 5.183.176.96, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-7.85MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 捷克-428.4KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
   - {name: 🇨🇳 中国-10.71MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.19MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-10.99MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-442.8KB/s(Youtube:不良林), server: tx-xg-2.ienai.xin, port: 11000, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-4.32MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-534.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-269.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-660.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-491.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.85MB/s(Youtube:不良林)
+      - 捷克-428.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.71MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-807.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
